--- a/cairo/Scarb.toml
+++ b/cairo/Scarb.toml
@@ -3,7 +3,7 @@ name = "messaging_tuto"
 version = "0.1.0"
 
 [dependencies]
-starknet = ">=2.2.0"
+starknet = "=2.3.1"
 
 [[target.starknet-contract]]
 sierra = true
