feat: update to dojo 1.0.9 (cairo 2.8.4)

--- a/cairo/katana.env
+++ b/cairo/katana.env
@@ -1,3 +1,2 @@
-export STARKNET_ACCOUNT=katana-0.json
-export STARKNET_KEYSTORE=katana-0.key.json
+export STARKNET_ACCOUNT=katana-0
 export STARKNET_RPC=http://0.0.0.0:5050
